Adds course-related functionality to the WDD231 course homepage
Introduces new JavaScript files for course management and date display
Includes CSS styles for large screens
Implements course card display based on completion status

Relates to #123

Adds course-related functionality and styling to the WDD231 course homepage

Introduces JavaScript files for course management and date display
Implements course card display based on completion status
Includes CSS styles for large screens

Relates to #123

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <header>
-    <img src="images/gabriel_calderon.jpg" alt="Gabriel" />
+    <img class="image1" src="images/gabriel_calderon.jpg" alt="Gabriel" />
     <span>Gabriel Calderon</span>
     <nav>
       <button id="menu-toggle">☰</button>
@@ -31,15 +31,14 @@
     <h1>Home</h1>
     <section>
       <h2>MDN Reference</h2>
-      <!-- Content -->
-    </section>
+          </section>
     <section>
       <h2>Certificate</h2>
       <div id="course-cards"></div>
     </section>
     <section>
       <h2>Additional Information</h2>
-      <!-- Content -->
+      
     </section>
   </main>
   <footer>
