--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <main>
     <h1>Home</h1>
     <section>
-      <h2>MDN Reference</h2>
+      <h2>New Site</h2>
           </section>
     <section>
       <h2>Certificate</h2>
