Update directory.html and related files

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,7 +38,7 @@
     <p>Last Modified: <span id="lastModified"></span></p>
   </footer>
 
-  <script src="scripts/directory.js" defer></script>
+  <script src="./scripts/directory.js" defer></script>
 
 </body>
 </html>
