--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -16,7 +16,7 @@
     <nav>
       <ul id="nav-menu">
         <li><a href="/index.html">Home</a></li>
-        <li><a href="/chamber/directory.html">Chamber</a></li>
+        <li><a href="./directory.html">Chamber</a></li>
         <li><a href="#">Final Project</a></li>
         <li><a href="#">GitHub</a></li>
         <li><a href="#">LinkedIn</a></li>
