--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Chamber of Commerce Business Directory" />
   <meta name="author" content="Gabriel Calderon" />
   <title>Chamber Directory</title>
+  <link rel="stylesheet" href="/chamber/styles/normalize.css" />
   <link rel="stylesheet" href="/chamber/styles/small.css" />
   <link rel="stylesheet" href="/chamber/styles/large.css" media="screen and (min-width: 768px)" />
 </head>
