Update directory.js and related files

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -39,7 +39,7 @@
     <p>Last Modified: <span id="lastModified"></span></p>
   </footer>
 
-  <script src="/chamber/scripts/directory.js" defer></script>
+<script src="scripts/directory.js"></script>
 
 </body>
 </html>
