--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/chamber/styles/normalize.css" />
   <link rel="stylesheet" href="/chamber/styles/small.css" />
   <link rel="stylesheet" href="/chamber/styles/large.css" media="screen and (min-width: 768px)" />
+  <script src="scripts/directory.js" defer></script>
 </head>
 <body>
   <header>
@@ -39,7 +40,7 @@
     <p>Last Modified: <span id="lastModified"></span></p>
   </footer>
 
-<script src="scripts/directory.js"></script>
+
 
 </body>
 </html>
