--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,11 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Chamber of Commerce Business Directory" />
+  <meta property="og:title" content="Chamber of Commerce" />
+  <meta property="og:description" content="Join the Chamber of Commerce." />
+  <meta property="og:image" content="images/social-share.png" />
   <meta name="author" content="Gabriel Calderon" />
   <title>Chamber Directory</title>
   <link rel="stylesheet" href="/chamber/styles/normalize.css" />
   <link rel="stylesheet" href="/chamber/styles/small.css" />
   <link rel="stylesheet" href="/chamber/styles/large.css" media="screen and (min-width: 768px)" />
+<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  
   <script src="scripts/directory.js" defer></script>
 </head>
 <body>
@@ -29,9 +34,11 @@
   <main>
     <h1>Business Directory</h1>
     <div class="view-toggle">
-      <button id="grid-view">Grid View</button>
-      <button id="list-view">List View</button>
-    </div>
+  <button id="grid-button">Grid View</button>
+  <button id="list-button">List View</button>
+</div>
+<section class="members grid"></section>
+
     <div id="directory-container" class="grid-view"></div>
   </main>
 
