--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <header>
-    <img src="/images/gabriel_calderon.jpg" alt="Chamber Logo" class="image1" />
+    <img src="/images/gabriel_calderon.jpg" alt="Gabriel Calderon" class="image1" />
     <button id="menu-toggle">☰</button>
     <nav>
       <ul id="nav-menu">
