--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,9 +9,9 @@
   <meta property="og:image" content="images/social-share.png" />
   <meta name="author" content="Gabriel Calderon" />
   <title>Chamber Directory</title>
-  <link rel="stylesheet" href="/chamber/styles/normalize.css" />
-  <link rel="stylesheet" href="/chamber/styles/small.css" />
-  <link rel="stylesheet" href="/chamber/styles/large.css" media="screen and (min-width: 768px)" />
+  <link rel="stylesheet" href="styles/normalize.css" />
+  <link rel="stylesheet" href="styles/small.css" />
+  <link rel="stylesheet" href="styles/large.css" media="screen and (min-width: 768px)" />
 <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   
   <script src="scripts/directory.js" defer></script>
