Update directory.html and related files

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -22,7 +22,7 @@
     <button id="menu-toggle">☰</button>
     <nav>
       <ul id="nav-menu">
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="./directory.html">Chamber</a></li>
         <li><a href="#">Final Project</a></li>
         <li><a href="#">GitHub</a></li>
