--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
       <ul id="nav-menu">
         <li><a href="#">Home</a></li>
         <li><a href="chamber/directory.html">Chamber</a></li>
-        <li><a href="#">Final Project</a></li>        git add .
-        git commit -m "Update index.html layout and footer"
-        git push origin main
+        <li><a href="#">Final Project</a></li>
         <li><a href="#">GitHub</a></li>
         <li><a href="#">LinkedIn</a></li>
       </ul>
