--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -21,13 +21,13 @@
     <img src="/images/gabriel_calderon.jpg" alt="Gabriel Calderon" class="image1" />
     <button id="menu-toggle">☰</button>
     <nav>
-      <ul id="nav-menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="./directory.html">Chamber</a></li>
-        <li><a href="#">Final Project</a></li>
-        <li><a href="#">GitHub</a></li>
-        <li><a href="#">LinkedIn</a></li>
-      </ul>
+     <ul id="nav-menu">
+  <li><a href="../index.html">Home</a></li>
+  <li><a href="directory.html">Chamber</a></li>
+  <li><a href="#">Final Project</a></li>
+  <li><a href="#">GitHub</a></li>
+  <li><a href="#">LinkedIn</a></li>
+</ul>
     </nav>
   </header>
 
