--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button id="menu-toggle">☰</button>
       <ul id="nav-menu">
         <li><a href="#">Home</a></li>
-        <li><a href="directory.html">Chamber</a></li>
+        <li><a href="chamber/directory.html">Chamber</a></li>
         <li><a href="#">Final Project</a></li>
         <li><a href="#">GitHub</a></li>
         <li><a href="#">LinkedIn</a></li>
