--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <header>
-    <img class="image1" src="images/gabriel_calderon.jpg" alt="Gabriel" />
+    <img class="image1" src="/images/gabriel_calderon.jpg" alt="Gabriel" />
     <span>Gabriel Calderon</span>
     <nav>
       <button id="menu-toggle">☰</button>
