--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,35 +22,44 @@
     <img class="image1" src="images/gabriel_calderon.jpg" alt="Gabriel" />
     <button id="menu-toggle">☰</button>
     <nav>
-     <ul id="nav-menu">
-  <li><a href="../index.html">Home</a></li>
-  <li><a href="directory.html">Chamber</a></li>
-  <li><a href="#">Final Project</a></li>
-  <li><a href="#">GitHub</a></li>
-  <li><a href="#">LinkedIn</a></li>
-</ul>
+     <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="directory.html">Directory</a></li>
+      <li><a href="join.html">Join</a></li>
+      <li><a href="discover.html">Discover</a></li>
+    </ul>
     </nav>
   </header>
 
   <main>
-    <h1>Home</h1>
-    <div class="view-toggle">
-  <button id="grid-button">Grid View</button>
-  <button id="list-button">List View</button>
-</div>
+  <section class="hero">
+    <img src="images/hero.jpg" alt="Hero Image">
+    <a href="join.html" class="cta-button">Keynote Tickets</a>
+  </section>
 
-<section id="weather"> ... </section>
-<section id="spotlights"> ... </section>
+  <section class="events">
+    <h2>Events</h2>
+    <!-- Upcoming events content -->
+  </section>
 
-<section class="members grid"></section>
-<section class="spotlights">
-  <h2>Business Spotlights</h2>
-  <div class="spotlight-cards" id="spotlights"></div>
-</section>
-    <div id="directory-container" class="grid-view"></div>
-  </main>
+  <section class="weather">
+    <h2>Current Weather</h2>
+    <div id="current-weather"></div>
+    <div id="forecast"></div>
+  </section>
+
+  <section class="spotlights">
+    <h2>Business Spotlights</h2>
+    <div class="spotlight-container" id="spotlight-container"></div>
+  </section>
+</main>
 
   <footer>
+    <div class="socials">
+    <a href="#"><img src="images/youtube.svg" alt="YouTube"></a>
+    <a href="#"><img src="images/twitter.svg" alt="Twitter"></a>
+    <a href="#"><img src="images/linkedin.svg" alt="LinkedIn"></a>
+  </div>
     <p>&copy; <span id="year"></span> Gabriel Calderon, WDD 231</p>
     <p>Last Modified: <span id="lastModified"></span></p>
   </footer>
