--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,16 +42,23 @@
     <!-- Upcoming events content -->
   </section>
 
-  <section class="weather">
-    <h2>Current Weather</h2>
-    <div id="current-weather"></div>
-    <div id="forecast"></div>
-  </section>
+ <section id="weather">
+  <h2>Current Weather</h2>
+  <p id="current-temp"></p>
+  <p id="weather-desc"></p>
+  <img id="weather-icon" alt="Weather Icon">
+</section>
 
-  <section class="spotlights">
-    <h2>Business Spotlights</h2>
-    <div class="spotlight-container" id="spotlight-container"></div>
-  </section>
+<section id="forecast">
+  <h2>3-Day Forecast</h2>
+  <div id="forecast-container"></div>
+</section>
+
+ <section id="spotlights">
+  <h2>Member Spotlights</h2>
+  <div id="spotlight-container"></div>
+</section>
+
 </main>
 
   <footer>
