--- a/chamber/index.html
+++ b/chamber/index.html
@@ -16,6 +16,7 @@
   
   <script src="scripts/directory.js" defer></script>
   <script type="module" src="scripts/home.js"></script>
+  <script src="scripts/weather.js"></script>
 </head>
 <body>
   <header>
@@ -34,7 +35,7 @@
   <main>
   <section class="hero">
     <img src="images/hero.jpg" alt="Hero Image">
-    <a href="join.html" class="cta-button">Keynote Tickets</a>
+    <a href="join.html" class="cta-button"></a>
   </section>
 
   <section class="events">
@@ -44,7 +45,7 @@
 
  <section id="weather">
   <h2>Current Weather</h2>
-  <p id="current-temp"></p>
+  <p id="current-weather"></p>
   <p id="weather-desc"></p>
   <img id="weather-icon" alt="Weather Icon">
 </section>
