Update chamber/index.html with weather, spotlights, and social links

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -55,9 +55,9 @@
   <div id="forecast-container"></div>
 </section>
 
- <section id="spotlights">
+<section id="spotlights">
   <h2>Member Spotlights</h2>
-  <div id="spotlight-container"></div>
+  <div id="spotlight-container" class="spotlight-grid"></div>
 </section>
 
 </main>
