Update files with latest changes

--- a/final/contact.html
+++ b/final/contact.html
@@ -334,5 +334,17 @@
       document.getElementById('emailError').textContent = '';
     });
   </script>
+
+  <section class="video-section">
+            <h2>Video about implementation</h2>
+            <div class="video-container">
+                <iframe src="https://www.loom.com/embed/3049c18344224bf28c5dbd15899e8aab?sid=c051d03c-1d06-44a3-a85d-b557d4218a80" 
+                        frameborder="0" 
+                        allowfullscreen 
+                        style="position: relative; width: 100%; height: 400px;">
+                </iframe>
+            </div>
+            <p class="video-caption">See how is working</p>
+        </section>
 </body>
 </html>
